testdata/golden/sema/valid/explicit_to_print.fmt
@entrypoint
fn main() -> int {
    print(42 to string);
    return 0;
}
