testdata/golden/sema/invalid/int_literal_range_assign.fmt
@entrypoint
fn main() -> int {
    let x: uint8 = 256;
    return 0;
}
